# griptape-nodes-engine

./: CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.agents/skills/griptape-nodes-workflows/: SKILL.md
.claude/skills/: inline_variable_substitution.md
.claude/skills/inline_variable_substitution/: SKILL.md
.github/workflows/: code-checks.yml  latest-release.yml  publish.yml  tests.yml  version-bump-next-on-release.yml  version-bump-on-release.yml  version-check.yml
docs/: command_line_interface.md  configuration.md  configuration_reference.md  faq.md  for_agents.md  glossary.md  index.md  installation.md  libraries.md  troubleshooting.md
docs/assets/css/: extra.css
docs/developing_nodes/: comprehensive_guide.md  node_isolation_with_workers.md  strict_mode.md
docs/development/: retained_mode.md
docs/development/custom_nodes/: authoring_libraries.md  comprehensive_guide.md  custom_widgets.md  error_handling.md  example_control_node.py  examples.md  execution_and_lifecycle.md  getting_started.md  index.md  node_isolation_with_workers.md  parameter_ui_reference.md  parameters.md  project_system.md
docs/enterprise/: admin_dashboard.md  admin_server.md  using_the_admin_server.md
docs/guides/: agent_sidebar.md  assets.md  configuration.md  libraries.md  publishing.md  variables.md  workflow_versions.md
docs/guides/agent/: choosing_a_model.md  index.md  mcp_servers.md  personalization.md  sending_messages.md  skills.md  threads.md  using_in_workflows.md
docs/guides/ai_providers/: custom.md  griptape_cloud.md  index.md  lm_studio.md  ollama.md
docs/guides/editor/: index.md  keyboard_shortcuts.md  managing_models_and_libraries.md  media_editors.md  node_groups.md  running_workflows.md  working_with_nodes.md
docs/guides/integrations/: hugging_face.md
docs/guides/mcp/: advanced_local_models.md  external_clients.md  getting_started.md  index.md  mcp_task_agents.md  rules.md
docs/guides/projects/: customization.md  environment.md  file_extension_directories.md  gui_guide.md  index.md  macros.md  situations.md  variables.md  version_pinning.md
docs/how_to/: agent_sidebar.md
docs/how_to/ai_providers/: griptape_cloud.md  index.md  lm_studio.md
docs/how_to/mcp/: advanced_local_models.md
docs/libraries/: index.md
docs/libraries/advanced_media/: index.md
docs/libraries/diffusers/: add_latents.md  configure_controlnet.md  controlnet_pipeline.md  create_noise_latents.md  decode_hdr_latents.md  decode_media_latent.md  empty_latents.md  encode_masked_media_latent.md  encode_media_latent.md  generate_media_latents.md  index.md  latent_upsampler.md  latents_composite_mask.md  load_lora.md  lora_pipeline.md  media_gen_conditioning.md  multiply_latents.md  pipeline_builder.md  save_latent_tensor.md  subtract_latents.md
docs/libraries/nuke/: index.md  nuke_end_flow.md  nuke_script.md  nuke_start_flow.md
docs/libraries/opencolorio/: index.md  load_ocio_config.md  ocio_color_parameters.md
docs/libraries/openexr/: display_exr_channel.md  display_exr_part.md  index.md  load_exr.md  save_exr.md
docs/nodes/: overview.md
docs/nodes/advanced_media_library/: diffusion_pipelines.md  yolov8_face_detection.md
docs/nodes/agents/: create_agent.md
docs/nodes/config/: grok_prompt_driver.md
docs/projects/: directories.md  gui_guide.md  index.md  macros.md  projects.md  sequences.md  situations.md  version_pinning.md  workspace.md
docs/publishing/: index.md
docs/reference/: command_line_interface.md  configuration_reference.md
docs/skills/griptape-nodes-workflows/: SKILL.md
docs/tutorials/: index.md
docs/tutorials/00_tour/: index.md
docs/tutorials/01_prompt_an_image/: index.md
docs/tutorials/02_coordinating_agents/: index.md
docs/tutorials/03_compare_prompts/: index.md
docs/tutorials/04_photography_team/: index.md
scripts/: generate_settings_reference.py
src/griptape_nodes/: __init__.py
src/griptape_nodes/agents/: __init__.py
src/griptape_nodes/api_client/: request_client.py
src/griptape_nodes/app/: worker_routing.py
src/griptape_nodes/cli/: shared.py
src/griptape_nodes/common/: node_executor.py  parameter_hydration.py  strict_mode.py  strict_mode_checks.py
src/griptape_nodes/drivers/: cloud_models.py
src/griptape_nodes/exe_types/: base_iterative_nodes.py  core_types.py  node_types.py  variable_resolver.py
src/griptape_nodes/files/: __init__.py  directory.py  file.py  file_sequence.py  os_utils.py  path_utils.py  project_file.py
tests/e2e/: _library_module_lifecycle_driver.py  test_library_module_lifecycle.py  test_nonserializable_resolution_state.py  test_subflow_dataflow_execution.py  test_subflow_group_name_collision.py  test_subflow_group_parallel_execution.py  test_subflow_import_flow_selection.py  test_workflow_serialization_bloat.py
(+287 files in other folders)
